syntax = "proto3";

option go_package = "./gen/pb";

service AuthService {
  rpc CreateUser(User) returns (ResponseMsg) {}
  rpc GetUser(UserRequest) returns (ResponseToken) {}
  rpc UpdateUser(User) returns (ResponseMsg) {}
  rpc ResetPassword(UserRequest) returns (ResponseMsg) {}
}

message User {
  string username = 1;
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string email = 5;
  string password = 6;
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message ResponseToken {
  string token = 1;
}

message ResponseMsg {
  int64 code = 1;
  string message = 2;
}